--- a/Pits KaPares Mobile Web Application Management and Ordering System with AI Assistant/index.html
+++ b/Pits KaPares Mobile Web Application Management and Ordering System with AI Assistant/index.html
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Pit’s KaPares Management System</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pit’s KaPares</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Pit’s KaPares Web-Based Management System</h1>
-    </header>
-    <main>
-        <section id="orders">
-            <h2>Manage Orders</h2>
-            <button onclick="getOrders()">Get Orders</button>
-            <div id="orderList"></div>
-        </section>
-        <section id="chat">
-            <h2>AI Chat Support</h2>
-            <div id="chatContainer"></div>
-            <input type="text" id="userInput" placeholder="Type your message...">
-            <button onclick="sendMessage()">Send</button>
-        </section>
-    </main>
-    <script src="scripts.js"></script>
+  <header>
+    <h1>Welcome to Pit’s KaPares</h1>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#menu">Menu</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section id="home">
+    <h2>Order your favorite KaPares</h2>
+    <p>Choose from our delicious menu and enjoy!</p>
+    <button onclick="showMenu()">View Menu</button>
+  </section>
+  <section id="menu" style="display: none;">
+    <h2>Our Menu</h2>
+    <ul>
+      <li>Special KaPares - $10</li>
+      <li>Regular KaPares - $8</li>
+      <li>Extra Rice - $2</li>
+    </ul>
+    <button onclick="order()">Place Order</button>
+  </section>
+  <section id="about">
+    <h2>About Pit’s KaPares</h2>
+    <p>We specialize in serving delicious and authentic KaPares dishes.</p>
+  </section>
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: info@kapares.com</p>
+    <p>Phone: 123-456-7890</p>
+  </section>
+  <script src="script.js"></script>
 </body>
 </html>
